--- a/src/index.scss
+++ b/src/index.scss
@@ -9,6 +9,42 @@
             url('./fonts/Roboto-Regular.woff') format('woff');
     unicode-range: U+000-5FF; /* Download only latin glyphs */
  }
+
+  @font-face {  
+  font-family: 'Roboto';
+  font-weight: 600;
+  font-style: normal;
+  font-display: swap; /* Use system font, then swap for loaded font when loaded */
+  src:  
+            local('Roboto-Medium'),
+            url('./fonts/Roboto-Medium.woff2') format('woff2'),
+            url('./fonts/Roboto-Medium.woff') format('woff');
+    unicode-range: U+000-5FF; /* Download only latin glyphs */
+ }
+
+  @font-face {  
+  font-family: 'Roboto';
+  font-weight: 800;
+  font-style: normal;
+  font-display: swap; /* Use system font, then swap for loaded font when loaded */
+  src:  
+            local('Roboto-Bold'),
+            url('./fonts/Roboto-Bold.woff2') format('woff2'),
+            url('./fonts/Roboto-Bold.woff') format('woff');
+    unicode-range: U+000-5FF; /* Download only latin glyphs */
+ }
+
+  @font-face {  
+  font-family: 'Roboto';
+  font-weight: 900;
+  font-style: normal;
+  font-display: swap; /* Use system font, then swap for loaded font when loaded */
+  src:  
+            local('Roboto-Black'),
+            url('./fonts/Roboto-Black.woff2') format('woff2'),
+            url('./fonts/Roboto-Black.woff') format('woff');
+    unicode-range: U+000-5FF; /* Download only latin glyphs */
+ }
  
   /* HICETNUNC */
  html,
